--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,77 @@
+
+/* use styling for top head of the page */
 .main-header{
-    background-color: darkgrey;
+    background-color: #31343d;
     text-align: left;
-    padding-left: 30px;
-    padding-top: 10px;
+    padding-top: 1px;
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-bottom: 1px;
     
+/* use myHeader to style box on left in top header */
+}
+#myHeader{
+    background-color: #92cccd;
+    color:#31343d;
+    text-align: left;
+    width: 300px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+
+
 }
 
 .topnav {
     overflow:hidden;
-    background-color: darkgrey;
-    
-    
+    background-color: #92cccd;
 }
 
+#hero-text{
+    color:#31343d;
+    background-color: #92cccd;
+    text-align: right;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.hero-content img{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), ;
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+}
+.hero img{
+    margin: 20px;
+    border: 10px;
+    width: 25%;
+}
+
+
 .topnav a {
-    float: right;
     display: flex;
-    flex-direction: row;
+    float: right;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    
+    flex-direction: row-reverse;
     /* text-align: right; */
     padding: 20px;
     text-wrap: 
     
 }
 
-.hero{
-    
+.h2{
+    color:#31343d
 }
 
-.hero img{
-    margin: 20px;
-    border: 10px;
-    width: 25%;
-}
+
 
 .content{
     float: left;
