--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,48 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 /* use styling for top head of the page */
 .main-header{
-    background-color: #31343d;
-    text-align: left;
-    padding-top: 1px;
-    padding-right: 0px;
-    padding-left: 0px;
-    padding-bottom: 1px;
-    
-/* use myHeader to style box on left in top header */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #3e4853;
 }
-#myHeader{
+/* use myHeader to style box on left in top header */
+.my-header{
     background-color: #92cccd;
     color:#31343d;
-    text-align: left;
-    width: 300px;
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-    padding-right: 10px;
+    text-align: right;
+    width: 450px;
+    font-size: 72px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 
-
+    
 }
 
+/* Style nav bar at the top of the page */
 .topnav {
-    overflow:hidden;
-    background-color: #92cccd;
+    font-size: 35px;
+    margin-right: 100px;
+}
+
+.topnav a {
+    color:#92cccd;
+    margin: 10px;
+    padding-right: 25px;
+    padding-left: 25px;
+    border-bottom: 5px solid #92cccd;
+    text-decoration: none;
 }
 
 #hero-text{
-    color:#31343d;
-    background-color: #92cccd;
+    color:#92cccd;
+    background-color: #3e4853;
     text-align: right;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -38,45 +50,33 @@
     padding-right: 5px;
 }
 
-.hero-content img{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), ;
+.hero-content img{ 
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),;
     height: 50%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-
-}
-.hero img{
     margin: 20px;
     border: 10px;
     width: 25%;
 }
 
+h2{
+    color:#6777a6;
+    font-size: 50px;
+}
 
-.topnav a {
+h3{
     display: flex;
-    float: right;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    
-    flex-direction: row-reverse;
-    /* text-align: right; */
-    padding: 20px;
-    text-wrap: 
-    
+    color: orange;
+    font: bold;
+    font-size: 25px;
 }
 
-.h2{
-    color:#31343d
+.main-section{
+    
 }
-
-
-
-.content{
-    float: left;
-    /* width: 50px; */
-    text-align: right;
 
 
 .column{
@@ -97,4 +97,19 @@
 }
 h2{
     color: darkblue;
+}
+
+/* Tablet */
+@media screen and (max-width: 992px){
+
+}
+
+/* Large smartphones */
+@media screen and (max-width:768px){
+
+}
+
+/* Small smartphones */
+@media screen and (max-width:576px){
+
 }
