--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* use styling for top head of the page */
+/* used flex to justify items at opposite ends and align in centre */
 .main-header{
     display: flex;
     flex-direction: row;
@@ -10,8 +10,8 @@ body{
     align-items: center;
     background-color: #3e4853;
 }
-/* use myHeader to style box on left in top header */
-.my-header{
+/* used margin to reduce default size of header */
+.my-name{
     background-color: #92cccd;
     color:#31343d;
     text-align: right;
@@ -21,18 +21,16 @@ body{
     padding-left: 15px;
     margin-top: 25px;
     margin-bottom: 25px;
-
-    
 }
 
-/* Style nav bar at the top of the page */
 .topnav {
-    font-size: 35px;
     margin-right: 100px;
 }
 
+/* removed underline and added bottom border to control styling such as width(w/ padding) & thickness*/
 .topnav a {
     color:#92cccd;
+    font-size: 35px;
     margin: 10px;
     padding-right: 25px;
     padding-left: 25px;
