--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,20 +51,25 @@ main{
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    background-image: url("../Images/image-4.jpeg");
     background-size: cover;
     height: 200px;
     margin-top: 0;
+    position: relative;
+}
+
+.hero img{
+    width:100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .hero h2{
+    position: absolute;
+    right: 50px;
+    bottom: 5px;
     background-color: #92cccd;
-    color: #31343d;
-    height: 25px;
-    width: 275px;
-    margin-right: 75px;
-    padding:15px 5px 15px 5px;
     font-size: 30px;
+    padding: 5px;
 }
 
 .content-item{
@@ -88,7 +93,6 @@ main{
 }
 
 .image-container{
-    /* flex: 1; */
     box-sizing: border-box;
     border: 5px solid #92cccd;
     background-color: #92cccd;
@@ -98,7 +102,6 @@ main{
 /* Flex grow required to  */
 .images-container{
     display: flex;
-    /* background-color: red; */
     flex: 1;
     flex-direction: column;
     row-gap: 15px;
